--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: discoverpingableserviceonlocalnetwork
-description: Help you find services on local network
-version: 0.0.1
+description: Help you find services on local area network
+version: 0.0.2
 homepage: https://github.com/yingshaoxo/flutter-discoverpingableserviceonlocalnetwork
 
 environment:
